# astrofs

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  USAGE.md  build.ps1  build.sh  config.example.json  pyastrofs.pyi  pyproject.toml
.github/workflows/: release.yml
docs/: MEDIA_GUIDE.md  OVERVIEW.md  PLUGINS.md  PYTHON_BINDINGS.md  THEMES.md
examples/: ex_pyastrofs.py
plugins/: quick_search_plugin.rs  theme_preview_plugin.rs
scripts/: README.md  build.ps1  build.sh  build_bindings.ps1  build_bindings.sh  build_helper.py  install.py
src/: app.rs  app_new.rs  bookmarks.rs  config.rs  fileops.rs  files.rs  git.rs  input.rs  integration_helpers.rs  integration_tests.rs  lib.rs  main.rs  media_player.rs  media_preview.rs  palette.rs  persistence.rs  plugin.rs  plugin_api.rs  preview.rs  search.rs  search_history.rs  theme.rs  theme_manager.rs  ui.rs  ui_new.rs  workspace.rs
themes/: config.default.json  config.dracula.json  config.monokai.json  dracula.json  monokai.json  nord.json  solarized_dark.json
whl/: pyastrofs-0.1.1-cp314-cp314-win_amd64.whl  pyastrofs.pyi
