[package]
name = "astrofs"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
walkdir = "2"
rayon = "1"
ignore = "0.4"
syntect = "5"
infer = "0.15"
humansize = "2"
git2 = { version = "0.18", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
